force-app/main/default/objects/Account/fields/AccountQty__c.field-meta.xml
<CustomField>
    <fullName>AccountQty__c</fullName>
    <label>Account Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>