force-app/main/default/objects/Account/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <externalId>true</externalId>
    <label>Document</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>