force-app/main/default/objects/Account/fields/IsDeveloper__c.field-meta.xml
<CustomField>
    <fullName>IsDeveloper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeveloper</label>
    <type>Checkbox</type>
</CustomField>