force-app/main/default/objects/Account/fields/IsPublisher__c.field-meta.xml
<CustomField>
    <fullName>IsPublisher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPublisher</label>
    <type>Checkbox</type>
</CustomField>