force-app/main/default/objects/Account/recordTypes/DeveloperPublisher.recordType-meta.xml
<RecordType>
    <fullName>DeveloperPublisher</fullName>
    <active>true</active>
    <label>Developer/Publisher</label>
</RecordType>